LJMet/currentError.txt
[rsyarif@cmslpc33 LJMet]$ scram b -j8
>> Local Products Rules ..... started
>> Local Products Rules ..... done
>> Entering Package FWLJMET/LJMet
>> Creating project symlinks
>> Compiling edm plugin /uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/DummyEventSelector.cc
>> Compiling edm plugin /uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/BaseEventSelector.cc
>> Compiling edm plugin /uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/LJMet.cc
>> Compiling edm plugin /uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/LjmetFactory.cc
>> Compiling edm plugin /uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/TestEventSelector.cc
>> Compiling edm plugin /uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/DummyCalc.cc
/uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/TestEventSelector.cc: In member function 'virtual bool TestEventSelector::operator()(const edm::EventBase&, pat::strbitset&)':
/uscms_data/d3/rsyarif/Brown2018/TT_BB_trilepton_LJMET_2017data/BuildingFullFWLjmet/CMSSW_9_4_12/src/FWLJMET/LJMet/plugins/TestEventSelector.cc:105:11: error: 'const class edm::EventBase' has no member named 'getByToken'; did you mean 'getByLabel'?
     event.getByToken(triggersToken,triggersHandle);
           ^~~~~~~~~~
config/SCRAM/GMake/Makefile.rules:2068: recipe for target 'tmp/slc6_amd64_gcc630/src/FWLJMET/LJMet/plugins/FWLJMETLJMetAuto/TestEventSelector.o' failed
gmake: *** [tmp/slc6_amd64_gcc630/src/FWLJMET/LJMet/plugins/FWLJMETLJMetAuto/TestEventSelector.o] Error 1
gmake: *** [There are compilation/build errors. Please see the detail log above.] Error 2
